# darth-schwader

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_watchlist.py  0003_bracket_orders.py
docs/: cash-account-rules.md  phase-1-plan.md  polygon-data-plan.md  schwab-developer-setup.md
scripts/: bootstrap_local.sh  polygon_backfill.py  schwab_oauth_login.py
src/darth_schwader/: config.py  lifespan.py  logging.py  main.py
src/darth_schwader/ai/: __init__.py  contracts.py  service.py
src/darth_schwader/api/: __init__.py  deps.py  error_handlers.py  templating.py
src/darth_schwader/broker/: __init__.py  base.py  cash_account.py  exceptions.py  factory.py  models.py
src/darth_schwader/data_sources/: __init__.py  schwab_market.py
src/darth_schwader/db/: __init__.py  models.py  session.py
src/darth_schwader/domain/: __init__.py  asset_types.py  enums.py  ids.py
src/darth_schwader/market/: __init__.py  bar_provider.py  indicator_engine.py  iv_watcher.py  setup_detector.py  universe.py
src/darth_schwader/quant/: __init__.py  direction_model.py  features.py  iv_metrics.py  regime.py
src/darth_schwader/risk/: __init__.py  context.py  engine.py  futures.py  models.py  policies.py  rules.py  sizing.py
tests/: conftest.py
tests/integration/: test_api_admin.py  test_api_settings_update.py  test_api_setup_heatmap.py  test_api_signals_hitl.py  test_api_status.py  test_api_watchlist_crud.py  test_dashboard_renders_watchlist_editor.py  test_mode_flip.py  test_paper_end_to_end.py  test_reconciliation.py  test_scheduler_jobs.py  test_strategy_type_migration.py
tests/unit/: test_bar_provider.py  test_bracket_orders.py  test_broker_factory.py  test_chain_normalization.py  test_client_order_id.py  test_futures_margin.py  test_indicator_engine.py  test_iv_metrics.py  test_iv_watcher.py  test_llm_factory.py  test_openrouter_selector.py  test_order_service_asset_routing.py  test_paper_broker_fills.py  test_readiness_gate.py  test_risk_engine_v3.py  test_risk_rules.py  test_risk_sizing.py  test_schwab_retry_refresh.py  test_settled_funds.py  test_setup_detector.py  test_setup_heatmap.py  test_signal_runner.py  test_strategy_validators.py  test_token_encryption.py  test_watchlist_repo.py
(+77 files in other folders)
